// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`com.mgmtp.a12.dataservices-model-migration.steps can migrate models to the next version properly: v2.0.0.json 1`] = `
"{
  "header": {
    "id": "ContractBusinessPartner",
    "modelType": "relationship",
    "modelVersion": "3.0.0",
    "locales": [
      {
        "code": "en"
      },
      {
        "code": "en_US"
      },
      {
        "code": "de"
      }
    ],
    "labels": [
      {
        "locale": "en",
        "text": "Contract and Business Partner"
      },
      {
        "locale": "de",
        "text": "Vertrag und Geschäftspartner"
      }
    ],
    "annotations": [
      {
        "name": "roles",
        "value": "admin,guest"
      }
    ],
    "modelReferences": [
      {
        "purpose": "Document model",
        "modelType": "document",
        "alias": "Contract",
        "reference": "Contract"
      },
      {
        "purpose": "Document model",
        "modelType": "document",
        "alias": "BusinessPartnerSuper",
        "reference": "BusinessPartnerSuper"
      }
    ]
  },
  "content": {
    "labels": [
      {
        "locale": "en",
        "text": "Main Policy Holder"
      },
      {
        "locale": "de",
        "text": "Hauptversicherungsnehmer"
      }
    ],
    "entityCharacteristics": [
      {
        "ordered": false,
        "navigable": true,
        "linkConstraints": {
          "multiplicity": {
            "lowerLimit": 0,
            "unbounded": true
          }
        },
        "candidateConstraints": {},
        "role": "Contract",
        "documentModel": "Contract"
      },
      {
        "labels": [
          {
            "locale": "en",
            "text": "Main Policy Holder"
          },
          {
            "locale": "de",
            "text": "Hauptversicherungsnehmer"
          }
        ],
        "ordered": false,
        "navigable": true,
        "linkConstraints": {
          "multiplicity": {
            "lowerLimit": 0,
            "unbounded": false,
            "upperLimit": 1
          }
        },
        "candidateConstraints": {},
        "role": "Partner",
        "documentModel": "BusinessPartnerSuper"
      }
    ],
    "duplicatesAllowed": false,
    "associationType": "SHARED",
    "storage": "EXTERNAL"
  }
}
"
`;

exports[`com.mgmtp.a12.dataservices-model-migration.steps can migrate models to the next version properly: v3.0.0.json 1`] = `
"{
  "header": {
    "id": "ContractBusinessPartner",
    "modelType": "relationship",
    "modelVersion": "4.0.0",
    "locales": [
      {
        "code": "en"
      },
      {
        "code": "en_US"
      },
      {
        "code": "de"
      }
    ],
    "labels": [
      {
        "locale": "en",
        "text": "Contract and Business Partner"
      },
      {
        "locale": "de",
        "text": "Vertrag und Geschäftspartner"
      }
    ],
    "annotations": [
      {
        "name": "roles",
        "value": "admin,guest"
      }
    ],
    "modelReferences": [
      {
        "purpose": "Document model",
        "modelType": "document",
        "alias": "Contract",
        "reference": "Contract"
      },
      {
        "purpose": "Document model",
        "modelType": "document",
        "alias": "BusinessPartnerSuper",
        "reference": "BusinessPartnerSuper"
      }
    ]
  },
  "content": {
    "duplicatesAllowed": false,
    "labels": [
      {
        "locale": "en",
        "text": "Contract and Business Partner"
      },
      {
        "locale": "de",
        "text": "Vertrag und Geschäftspartner"
      }
    ],
    "entityCharacteristics": [
      {
        "ordered": false,
        "labels": [
          {
            "locale": "en",
            "text": "Contract"
          },
          {
            "locale": "de",
            "text": "Vertrag"
          }
        ],
        "role": "Contract",
        "documentModel": "Contract",
        "linkConstraints": {
          "multiplicity": {
            "unbounded": true,
            "upperLimit": null
          }
        }
      },
      {
        "ordered": false,
        "labels": [
          {
            "locale": "en",
            "text": "Main Policy Holder"
          },
          {
            "locale": "de",
            "text": "Hauptversicherungsnehmer"
          }
        ],
        "role": "Partner",
        "documentModel": "BusinessPartnerSuper",
        "linkConstraints": {
          "multiplicity": {
            "unbounded": false,
            "upperLimit": 1
          }
        }
      }
    ]
  }
}
"
`;

exports[`com.mgmtp.a12.dataservices-model-migration.steps can migrate models to the next version properly: v4.0.0.json 1`] = `
"{
  "header": {
    "id": "ContractPartner",
    "modelType": "relationship",
    "modelVersion": "4.0.0"
  },
  "content": {
    "labels": [],
    "linkDocumentModel": null,
    "duplicatesAllowed": false,
    "entityCharacteristics": [
      {
        "role": "Contract",
        "documentModel": "Contract",
        "ordered": false,
        "linkConstraints": {
          "multiplicity": {
            "unbounded": true
          }
        }
      }
    ]
  }
}
"
`;
